<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentLogin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <EditText
            android:id="@+id/etRegUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegUsername"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etRegName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegPassword"
            android:hint="@string/first_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etRegSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegName"
            android:hint="@string/family_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etRegPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegSurname"
            android:hint="@string/phone_number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/regRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_below="@+id/etRegPhone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/register" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgLogoReg"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:scaleX="-1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
